# booktree

./: .dockerignore  .gitignore  CONFIG.md  Dockerfile  README.md  audible.py  bookTree.json  bookTree.py  books.py  booktemplate.opf  booktree.py  booktree_log_20240802013528.csv  cookies.pkl  default_config.cfg  maried.json  myx_args.py  myx_audible.py  myx_classes.py  myx_mam.py  myx_utilities.py  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
templates/: booktemplate.opf  default_config.cfg
